@@ -12,7 +12,6 @@ package com.bynder.sdk.configuration;
 
 import static org.junit.Assert.assertEquals;
 
-import com.bynder.sdk.model.oauth.Token;
 import java.net.URI;
 import java.net.URL;
 import org.junit.Before;
@@ -25,29 +24,30 @@ import org.mockito.MockitoAnnotations;
  */
 public class ConfigurationTest {
 
-  public static final String EXPECTED_BASE_URL = "https://baseurl.bynder.com";
-  public static final String EXPECTED_CLIENT_ID = "clientId";
-  public static final String EXPECTED_CLIENT_SECRET = "clientSecret";
-  public static final String EXPECTED_REDIRECT_URI = "https://redirecturi.bynder.com";
+    public static final String EXPECTED_BASE_URL = "https://baseurl.bynder.com";
+    public static final String EXPECTED_CLIENT_ID = "clientId";
+    public static final String EXPECTED_CLIENT_SECRET = "clientSecret";
+    public static final String EXPECTED_REDIRECT_URI = "https://redirecturi.bynder.com";
 
-  @Mock
-  private HttpConnectionSettings httpConnectionSettings;
+    @Mock
+    private HttpConnectionSettings httpConnectionSettings;
 
-  @Before
-  public void setUp() {
-    MockitoAnnotations.initMocks(this);
-  }
+    @Before
+    public void setUp() {
+        MockitoAnnotations.initMocks(this);
+    }
 
-  @Test
-  public void buildConfigurationWithoutCallback() throws Exception {
-    Configuration configuration = new Configuration.Builder(new URL(EXPECTED_BASE_URL))
-        .setOAuthSettings(new OAuthSettings(EXPECTED_CLIENT_ID, EXPECTED_CLIENT_SECRET, new URI(EXPECTED_REDIRECT_URI)))
-        .setHttpConnectionSettings(httpConnectionSettings).build();
+    @Test
+    public void buildConfigurationWithoutCallback() throws Exception {
+        Configuration configuration = new Configuration.Builder(new URL(EXPECTED_BASE_URL))
+            .setOAuthSettings(new OAuthSettings(EXPECTED_CLIENT_ID, EXPECTED_CLIENT_SECRET,
+            new URI(EXPECTED_REDIRECT_URI)))
+            .setHttpConnectionSettings(httpConnectionSettings).build();
 
-    assertEquals(EXPECTED_BASE_URL, configuration.getBaseUrl().toString());
-    assertEquals(EXPECTED_CLIENT_ID, configuration.getOAuthSettings().getClientId());
-    assertEquals(EXPECTED_CLIENT_SECRET, configuration.getOAuthSettings().getClientSecret());
-    assertEquals(EXPECTED_REDIRECT_URI, configuration.getOAuthSettings().getRedirectUri().toString());
-    assertEquals(httpConnectionSettings, configuration.getHttpConnectionSettings());
-  }
+        assertEquals(EXPECTED_BASE_URL, configuration.getBaseUrl().toString());
+        assertEquals(EXPECTED_CLIENT_ID, configuration.getOAuthSettings().getClientId());
+        assertEquals(EXPECTED_CLIENT_SECRET, configuration.getOAuthSettings().getClientSecret());
+        assertEquals(EXPECTED_REDIRECT_URI, configuration.getOAuthSettings().getRedirectUri().toString());
+        assertEquals(httpConnectionSettings, configuration.getHttpConnectionSettings());
+    }
 }
